@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190518"
-#define public MagickPackageReleaseDate "snapshot-20190518"
+#define public MagickPackageVersionAddendum ".020190519"
+#define public MagickPackageReleaseDate "snapshot-20190519"
